--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyB2C3StoqhOyyDYImN3NzS6FobVxFbRqZU" />
+        android:value="" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.LOCATION_HARDWARE.location.gps"/>
